<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

   <ScrollView android:layout_width="wrap_content"
               android:layout_height="480sp"
               android:id="@+id/scrollView"
               android:layout_alignParentTop="true"
               android:layout_alignParentLeft="true"
               android:layout_alignParentStart="true">

      <RelativeLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:paddingLeft="@dimen/activity_horizontal_margin"
                      android:paddingRight="@dimen/activity_horizontal_margin"
                      android:paddingTop="@dimen/activity_vertical_margin"
                      android:paddingBottom="@dimen/activity_vertical_margin"
                      tools:context=".MainActivity">

         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/ema_screen_location_header"
                   android:id="@+id/ema_screen_location_header"
                   android:layout_alignParentLeft="true"
                   android:layout_alignParentStart="true"
                   android:textSize="20sp"
                   android:textColor="#000000"
                   android:layout_marginTop="12dp"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/ema_screen_in_or_out_text"
                      android:id="@+id/ema_screen_in_or_out_text"
                      android:layout_below="@id/ema_screen_location_header"
                      android:layout_alignParentLeft="true"
                      android:layout_alignParentStart="true"
                      android:textSize="16sp"
                      android:textColor="#0000FF"
                      android:layout_marginTop="12dp"
                      android:paddingLeft="12dp"
                      android:paddingRight="3dp"/>

         <RadioGroup android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/ema_screen_in_or_out_group"
                     android:layout_below="@id/ema_screen_in_or_out_text"
                     android:paddingLeft="12dp"
                     android:paddingRight="3dp">
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/ema_screen_in_radio"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:labelFor="@id/ema_screen_in_radio"
                      android:text="@string/ema_screen_in_radio_label"/>
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/ema_screen_out_radio"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:labelFor="@id/ema_screen_out_radio"
                      android:text="@string/ema_screen_out_radio_label"/>
         </RadioGroup>

         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/ema_screen_where_text"
                   android:id="@+id/ema_screen_where_text"
                   android:layout_below="@id/ema_screen_in_or_out_group"
                   android:textSize="16sp"
                   android:textColor="#0000FF"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>
         <EditText android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_where_text"
                   android:textSize="16sp"
                   android:id="@+id/ema_screen_where_input"
                   android:hint="@string/ema_screen_where_hint"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>

         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/ema_screen_what_text"
                   android:id="@+id/ema_screen_what_text"
                   android:layout_below="@id/ema_screen_where_input"
                   android:textSize="16sp"
                   android:textColor="#0000FF"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>
         <EditText android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_what_text"
                   android:textSize="16sp"
                   android:id="@+id/ema_screen_what_input"
                   android:hint="@string/ema_screen_what_hint"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>

         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/ema_screen_who_text"
                   android:id="@+id/ema_screen_who_text"
                   android:layout_below="@id/ema_screen_what_input"
                   android:textSize="16sp"
                   android:textColor="#0000FF"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>
         <EditText android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_who_text"
                   android:textSize="16sp"
                   android:id="@+id/ema_screen_who_input"
                   android:hint="@string/ema_screen_who_hint"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>

         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/ema_screen_aq_header"
                   android:id="@+id/ema_screen_aq_header"
                   android:layout_alignParentLeft="true"
                   android:layout_alignParentStart="true"
                   android:textSize="20sp"
                   android:textColor="#000000"
                   android:layout_marginTop="12dp"
                   android:layout_below="@id/ema_screen_who_input"/>

         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_aq_header"
                   android:text="@string/ema_screen_aq_awareness"
                   android:id="@+id/ema_screen_aq_awareness"
                   android:textSize="16sp"
                   android:textColor="#0000FF"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>
         <SeekBar android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/ema_screen_aq_awareness_input"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentEnd="true"
                  android:layout_below="@id/ema_screen_aq_awareness"/>

         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_aq_awareness_input"
                   android:text="@string/ema_screen_aq_belief"
                   android:id="@+id/ema_screen_aq_belief"
                   android:textSize="16sp"
                   android:textColor="#0000FF"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>
         <SeekBar android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/ema_screen_aq_belief_input"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentEnd="true"
                  android:layout_below="@id/ema_screen_aq_belief"/>

         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_aq_belief_input"
                   android:text="@string/ema_screen_aq_intent"
                   android:id="@+id/ema_screen_aq_intent"
                   android:textSize="16sp"
                   android:textColor="#0000FF"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>
         <SeekBar android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/ema_screen_aq_intent_input"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentEnd="true"
                  android:layout_below="@id/ema_screen_aq_intent"/>

         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_aq_intent_input"
                   android:text="@string/ema_screen_aq_behave"
                   android:id="@+id/ema_screen_aq_behave"
                   android:textSize="16sp"
                   android:textColor="#0000FF"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>
         <SeekBar android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/ema_screen_aq_behave_input"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentEnd="true"
                  android:layout_below="@id/ema_screen_aq_behave"/>

         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_aq_behave_input"
                   android:text="@string/ema_screen_aq_barrier"
                   android:id="@+id/ema_screen_aq_barrier"
                   android:textSize="16sp"
                   android:textColor="#0000FF"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>
         <EditText android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_aq_barrier"
                   android:textSize="16sp"
                   android:id="@+id/ema_screen_aq_barrier_input"
                   android:hint="@string/ema_screen_aq_barrier_hint"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>
      </RelativeLayout>
   </ScrollView>

   <Button android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/ema_screen_save_button"
           android:onClick="on_EMA_Screen_save_button_Click"
           android:layout_alignParentBottom="true"
           android:layout_alignParentRight="true"/>
   <Button android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/ema_screen_cancel_button"
           android:onClick="on_EMA_Screen_cancel_button_Click"
           android:layout_alignParentBottom="true"
           android:layout_alignParentLeft="true"/>
</RelativeLayout>