<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".EMAActivity">

   <ScrollView android:layout_width="wrap_content"
               android:layout_height="400sp"
               android:id="@+id/scrollView"
               android:layout_alignParentTop="true"
               android:layout_alignParentLeft="true"
               android:layout_alignParentStart="true">

      <RelativeLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingLeft="@dimen/activity_horizontal_margin"
                      android:paddingRight="@dimen/activity_horizontal_margin"
                      android:paddingTop="@dimen/activity_vertical_margin"
                      android:paddingBottom="@dimen/activity_vertical_margin"
                      tools:context=".MainActivity">

         <!-- Location -->
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/ema_screen_location_header"
                   android:id="@+id/ema_screen_location_header"
                   android:layout_alignParentLeft="true"
                   android:layout_alignParentStart="true"
                   android:textSize="20sp"
                   android:textColor="#000000"
                   android:layout_marginTop="12dp"/>

            <!-- Are you indoors or outdoors? -->
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/ema_screen_in_or_out_text"
                      android:id="@+id/ema_screen_in_or_out_text"
                      android:layout_below="@id/ema_screen_location_header"
                      android:layout_alignParentLeft="true"
                      android:layout_alignParentStart="true"
                      android:textSize="16sp"
                      android:textColor="#0000FF"
                      android:layout_marginTop="12dp"
                      android:paddingLeft="12dp"
                      android:paddingRight="3dp"/>

         <RadioGroup android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/ema_screen_in_or_out_group"
                     android:layout_below="@id/ema_screen_in_or_out_text"
                     android:paddingLeft="12dp"
                     android:paddingRight="3dp">
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/ema_screen_in_radio"/>
            <!-- In -->
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:labelFor="@id/ema_screen_in_radio"
                      android:text="@string/ema_screen_in_radio_label"/>
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/ema_screen_out_radio"/>
            <!-- Out -->
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:labelFor="@id/ema_screen_out_radio"
                      android:text="@string/ema_screen_out_radio_label"/>
         </RadioGroup>

         <!-- Where are you? -->
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/ema_screen_where_text"
                   android:id="@+id/ema_screen_where_text"
                   android:layout_below="@id/ema_screen_in_or_out_group"
                   android:textSize="16sp"
                   android:textColor="#0000FF"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>
         <EditText android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_where_text"
                   android:textSize="16sp"
                   android:id="@+id/ema_screen_where_input"
                   android:hint="@string/ema_screen_where_hint"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>

         <!-- What are you doing? -->
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/ema_screen_what_text"
                   android:id="@+id/ema_screen_what_text"
                   android:layout_below="@id/ema_screen_where_input"
                   android:textSize="16sp"
                   android:textColor="#0000FF"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>
         <EditText android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_what_text"
                   android:textSize="16sp"
                   android:id="@+id/ema_screen_what_input"
                   android:hint="@string/ema_screen_what_hint"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>

         <!-- Who are you with? -->
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/ema_screen_who_text"
                   android:id="@+id/ema_screen_who_text"
                   android:layout_below="@id/ema_screen_what_input"
                   android:textSize="16sp"
                   android:textColor="#0000FF"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>
         <EditText android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_who_text"
                   android:textSize="16sp"
                   android:id="@+id/ema_screen_who_input"
                   android:hint="@string/ema_screen_who_hint"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>

         <!-- Air quality -->
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/ema_screen_aq_header"
                   android:id="@+id/ema_screen_aq_header"
                   android:layout_alignParentLeft="true"
                   android:layout_alignParentStart="true"
                   android:textSize="20sp"
                   android:textColor="#000000"
                   android:layout_marginTop="12dp"
                   android:layout_below="@id/ema_screen_who_input"/>

         <!-- Awareness: What do you think your current air quality? -->
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_aq_header"
                   android:text="@string/ema_screen_aq_awareness"
                   android:id="@+id/ema_screen_aq_awareness"
                   android:textSize="16sp"
                   android:textColor="#0000FF"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>
         <SeekBar android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/ema_screen_aq_awareness_input"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentEnd="true"
                  android:layout_below="@id/ema_screen_aq_awareness"
                  android:max="9"/>

         <!-- Belief: How strongly do you believe the air quality could hurt your health? -->
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_aq_awareness_input"
                   android:text="@string/ema_screen_aq_belief"
                   android:id="@+id/ema_screen_aq_belief"
                   android:textSize="16sp"
                   android:textColor="#0000FF"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>
         <SeekBar android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/ema_screen_aq_belief_input"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentEnd="true"
                  android:layout_below="@id/ema_screen_aq_belief"
                  android:max="9"/>

         <!-- Intention: How likely are you to change location to get to cleaner air? -->
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_aq_belief_input"
                   android:text="@string/ema_screen_aq_intent"
                   android:id="@+id/ema_screen_aq_intent"
                   android:textSize="16sp"
                   android:textColor="#0000FF"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>
         <SeekBar android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/ema_screen_aq_intent_input"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentEnd="true"
                  android:layout_below="@id/ema_screen_aq_intent"
                  android:max="9"/>

         <!-- Behavior: Since the last report, did you change location to get to cleaner air? -->
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_aq_intent_input"
                   android:text="@string/ema_screen_aq_behave"
                   android:id="@+id/ema_screen_aq_behave"
                   android:textSize="16sp"
                   android:textColor="#0000FF"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>

         <RadioGroup android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/ema_screen_aq_behave_group"
                     android:layout_below="@id/ema_screen_aq_behave"
                     android:paddingLeft="12dp"
                     android:paddingRight="3dp">
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/ema_screen_aq_behave_yes_radio"/>
            <!-- Yes -->
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:labelFor="@id/ema_screen_aq_behave_yes_radio"
                      android:text="@string/ema_screen_aq_behave_yes_text"/>
            <RadioButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/ema_screen_aq_behave_no_radio"/>
            <!-- No -->
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:labelFor="@id/ema_screen_aq_behave_no_radio"
                      android:text="@string/ema_screen_aq_behave_no_text"/>
         </RadioGroup>

         <!-- Barriers: If you did not move to get to cleaner air but wanted to, what got in the way? -->
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_aq_behave_group"
                   android:text="@string/ema_screen_aq_barrier"
                   android:id="@+id/ema_screen_aq_barrier"
                   android:textSize="16sp"
                   android:textColor="#0000FF"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>
         <EditText android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_below="@id/ema_screen_aq_barrier"
                   android:textSize="16sp"
                   android:id="@+id/ema_screen_aq_barrier_input"
                   android:hint="@string/ema_screen_aq_barrier_hint"
                   android:paddingLeft="12dp"
                   android:paddingRight="3dp"/>

         <!-- Existing conditions -->
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/ema_screen_existing_header"
                   android:id="@+id/ema_screen_existing_header"
                   android:layout_below="@id/ema_screen_aq_barrier_input"
                   android:layout_alignParentLeft="true"
                   android:layout_alignParentStart="true"
                   android:textSize="20sp"
                   android:textColor="#000000"
                   android:layout_marginTop="12dp"/>

         <!-- Container for list of existing conditions, which will be added and updated
              dynamically. Each new condition will be added in its own TableRow. -->
         <TableLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/ema_screen_existing_header"
                      android:id="@+id/ema_screen_existing_table">

            <TableRow android:id="@+id/ema_screen_existing_header_row">
               <EditText android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="16sp"
                         android:id="@+id/ema_screen_existing_input"
                         android:hint="@string/ema_screen_aq_existing_hint"
                         android:paddingLeft="12dp"
                         android:paddingRight="3dp"/>

                  <Button android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="end"
                          android:text="@string/ema_screen_existing_add_button"
                          android:onClick="on_EMA_Screen_add_button_click"/>
            </TableRow>

         </TableLayout>

      </RelativeLayout>
   </ScrollView>

   <!-- Save -->
   <Button android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/ema_screen_save_button"
           android:onClick="on_EMA_Screen_save_button_click"
           android:layout_alignParentBottom="true"
           android:layout_alignParentRight="true"/>
   <!-- Cancel -->
   <Button android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/ema_screen_cancel_button"
           android:onClick="on_EMA_Screen_cancel_button_click"
           android:layout_alignParentBottom="true"
           android:layout_alignParentLeft="true"/>
</RelativeLayout>